# siox

./: .gitignore  CMAKE-ABC.txt  CMakeLists.txt  CTestConfig.cmake  Doxyfile  Howto-SIOX-With-Wrappers.txt  Makefile  README  README-UHH.txt  README-WAF.txt  README.md  README.txt  configure  design.txt  directory-structure.txt  enforce-code-style.sh  grepSource  set_ld_path.sh  wscript
communication/: CMakeLists.txt  CallbackWorker.cpp  CallbackWorker.h  ConnectionFactory.cpp  ConnectionFactory.h  IPCConnection.cpp  IPCConnection.h  IPCListener.cpp  IPCListener.h  Listener.cpp  Listener.h  ListenerFactory.cpp  ListenerFactory.h  Message.cpp  Message.h  MessageCallback.cpp  MessageCallback.h  MessageClient.cpp  MessageClient.h  MessageHandler.cpp  MessageHandler.h  MessageQueue.cpp  MessageQueue.h  MessageServer.cpp  MessageServer.h  Messenger.cpp  Messenger.h  QueuedMessageConnection.cpp  QueuedMessageConnection.h  README.txt  TCPConnection.cpp  TCPConnection.h  TCPListener.cpp  TCPListener.h  URI.cpp  URI.h  Worker.cpp  Worker.h  WorkerPool.cpp  WorkerPool.h  (+1 more)
communication/doc/: Class Diagram.xmi
core/: CMakeLists.txt  README.txt
core/activity_multiplexer/: ActivityMultiplexer.cpp  ActivityMultiplexer.hpp  ActivityMultiplexer_Impl1.cpp  ActivityMultiplexer_Impl1.hpp  SIOX_Statistics.hpp  history.h
core/autoconfigurator/: AutoConfigurator.cpp  CMakeLists.txt  ModuleOptions.hpp  wscript
core/autoconfigurator/ConfigurationProviderPlugins/: CMakeLists.txt
core/comm/: CMakeLists.txt  Callback.cc  Callback.h  Callback.hpp  Connection.cc  Connection.cpp  Connection.h  ConnectionFactory.cc  ConnectionFactory.cpp  ConnectionFactory.h  ConnectionFactory.hpp  ConnectionMessage.cc  ConnectionMessage.cpp  ConnectionMessage.h  MessageHandler.h  MultiMessageTypeService.cpp  README.txt  Server.h  ServerFactory.cc  ServerFactory.cpp  ServerFactory.h  ServerFactory.hpp  Service.cc  Service.h  Service.hpp  ServiceClient.cc  ServiceClient.cpp  ServiceClient.h  ServiceClient.hpp  ServiceServer.cc  ServiceServer.cpp  ServiceServer.h  ServiceServer.hpp  wscript
core/comm/buffers/: siox.proto
core/comm/ipc/: IPCConnection.cc  IPCConnection.cpp  IPCConnection.h  IPCConnection.hpp  IPCServer.cc  IPCServer.cpp  IPCServer.h  IPCServer.hpp
core/component/: CMakeLists.txt  ComponentRegistrar.cpp  wscript
core/config/: CMakeLists.txt  Configuration.cpp  Configuration.h  Configuration.hpp  README  SioxConf.hpp
core/container/: CMakeLists.txt  container-serializer.cpp  wscript
core/logger/: BasicLogger.cpp  CMakeLists.txt  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  NetLogger.cpp  NetLogger.h  NetLoggerServer.cpp  NetLoggerServer.h  README  SioxLogger.cpp  SioxLogger.h  SyslogLogger.cpp  SyslogLogger.h  SyslogLogger.hpp
core/math/: CMakeLists.txt  MathematicalEquation.cpp  wscript
core/module/: CMakeLists.txt  Module.hpp  ModuleLoader.cpp  module-loader.cpp  wscript
core/test/: CMakeLists.txt  communication.cc  configuration.cc  configuration.cpp  siox.conf  siox.yaml
monitoring/: CMakeLists.txt  statistics.txt  tracking-of-causal-relations.txt
monitoring/activity_builder/: ActivityBuilder.cpp  CMakeLists.txt  wscript
monitoring/activity_multiplexer/: ActivityMultiplexer.hpp  ActivityMultiplexerAsync.cpp  ActivityMultiplexerAsyncOptions.hpp  ActivityMultiplexerAsyncThreaded.cpp  ActivityMultiplexerListener.hpp  ActivityMultiplexerListener_Impl1.cpp  ActivityMultiplexerListener_Impl1.hpp  ActivityMultiplexer_Impl1.cpp  ActivityMultiplexer_Impl1.hpp  ActivityMultiplexer_Listener.cpp  ActivityMultiplexer_Listener.hpp  ActivityPluginDereferencingOptions.hpp  ActivityPluginDereferencingStandardImpl.cpp  CMakeLists.txt  HPSA.h  README.txt  wscript
monitoring/activity_multiplexer2/: ActivityMultiplexer.hpp  history-pump_statistics_activities.cpp  history.h  state_machine_plugin1-SL-RW
monitoring/datatypes/: Activity.cpp.old  Component.cpp.old  activity.cpp  wscript
monitoring/helpers/: siox_time.c  siox_time.h  wscript
monitoring/low-level-C-interface/: siox-ll.h
monitoring/low-level-c/: CMakeLists.txt  siox-ll-internal.hpp  siox-ll.c  siox-ll.cpp  wscript
monitoring/ontology/: CMakeLists.txt  Makefile  datatype.c  testontology.c
monitoring/statistics_collector/: CMakeLists.txt  Statistic.cpp  StatisticsProviderPluginData.cpp  StatisticsProviderPluginData.hpp  ThreadedStatisticsCollector.cpp  ThreadedStatisticsOptions.hpp  wscript
monitoring/statistics_multiplexer/: CMakeLists.txt  StatisticsMultiplexerSync.cpp  wscript
monitoring/system_information/: CMakeLists.txt
monitoring/transaction_system/: CMakeLists.txt  PostgreSQLBackend.cpp  PostgreSQLBackend.h  PostgreSQLBackend.hpp  PostgreSQLPumpCallback.cpp  PostgreSQLPumpCallback.h  PostgreSQLPumpCallback.hpp  TransactionService.cpp  TransactionService.h  siox-db.sql  sioxtsd.cpp  testclient.cpp  transaction_server.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/daemon/: CMakeLists.txt
src/include/: workarounds.hpp
src/knowledge/: CMakeLists.txt
src/monitoring/: CMakeLists.txt
src/tools/: CMakeLists.txt  siox-plot-trace-output
src/util/: CMakeLists.txt  OverheadStatistics.cpp  ReporterHelper.cpp  ReporterHelper.hpp  Rnd.hpp  TestHelper.hpp  Util.hpp  autoLoadModules.cpp  threadSafety.c  threadSafety.h  time.c  time.h
tools/: CMakeLists.txt  c++dummy-implementer.py  serialization-code-generator.py
tools/TraceReader/: CMakeLists.txt  TraceReader.cpp  TraceReader.hpp  TraceReaderMain.cpp  wscript
tools/cmake/: FindNetCDF.cmake  SIOXMacros.cmake
tools/daemon/: Deamon.cpp  wscript
tools/gap_buffer/: gap_buffer.cpp
tools/iopattern2dios/: README  doku_iopattern2dios.tex  iopattern2dios.py
tools/otf2siox/: CMakeLists.txt  README.TXT  libotf2siox.c  libotf2siox.h  otf2siox.c
tools/siox-skeleton-builder/: CMakeLists.txt  siox-skeleton-builder  siox-skeleton-builder.py  template.py  test-siox-skeleton-builder.py
tools/siox-wrapper/: README  siox-wrapper.py  template.py
tools/tsweb/: activity.php  causal_chain.php  db.sql  header.php  index.php  siox.css
tools/web/: README.txt
(+1608 files in other folders)
