cmake_minimum_required(VERSION 2.8)
project(SIOX)

add_subdirectory(activity_builder)
add_subdirectory(activity_multiplexer)
add_subdirectory(association_mapper)
add_subdirectory(low-level-c)
# add_subdirectory(statistics_collector)
# add_subdirectory(statistics_multiplexer)
add_subdirectory(system_information)
add_subdirectory(transaction_system)
